[gd_scene load_steps=4 format=2]

[ext_resource path="res://screens/Menu/MenuMain.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 646, 200 ), Vector2( 415, 200 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MiscContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MenuMain" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 415.0
margin_top = 200.0
margin_right = 643.0
margin_bottom = 312.0
custom_constants/separation = 10

[node name="ButtonPlay" type="Button" parent="ButtonContainer"]
margin_right = 228.0
margin_bottom = 30.0
size_flags_vertical = 3
shortcut_in_tooltip = false
text = "NEW_GAME_BUTTON"
align = 0

[node name="ButtonSettings" type="Button" parent="ButtonContainer"]
margin_top = 40.0
margin_right = 228.0
margin_bottom = 70.0
size_flags_vertical = 3
shortcut_in_tooltip = false
text = "SETTINGS_BUTTON"
align = 0

[node name="ButtonExit" type="Button" parent="ButtonContainer"]
margin_top = 80.0
margin_right = 228.0
margin_bottom = 112.0
size_flags_vertical = 3
text = "QUIT_BUTTON"
align = 0

[node name="MiscContainer" type="HBoxContainer" parent="."]
margin_left = 424.0
margin_top = 335.0
margin_right = 583.0
margin_bottom = 358.0

[node name="Label" type="Label" parent="MiscContainer"]
margin_right = 86.0
margin_bottom = 23.0
size_flags_vertical = 1
text = "Version Label"
valign = 2

[node name="ButtonAnimator" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[node name="MiscAnimator" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )
[connection signal="pressed" from="ButtonContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
